@@ -37,6 +37,7 @@ New user-visible features
 Bugs fixed
 ----------
 - Bug 1745 - There can be only one Ipv6AddressHelper in a script
+- Bug 2107 - Enable PCAP for S1 and X2 point-to-point links
 - Bug 2277 - lte: EpcTftClassifier::Classify blindly assumes that a packet has a L4 header 
 - Bug 2505 - network:  Avoid asserts in Header/Trailer deserialization
 - Bug 2656 - wifi: Minstrel and MinstrelHt provide different results for 802.11a/b/g
